// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Script Merging should merge multi-axis scripts by filename 1`] = `
[
  Funscript {
    "actions": [
      FunAction {
        "at": 0,
        "pos": 75,
      },
      FunAction {
        "at": 200,
        "pos": 25,
      },
      FunAction {
        "at": 400,
        "pos": 75,
      },
      FunAction {
        "at": 600,
        "pos": 25,
      },
      FunAction {
        "at": 800,
        "pos": 75,
      },
      FunAction {
        "at": 1000,
        "pos": 25,
      },
      FunAction {
        "at": 1200,
        "pos": 75,
      },
      FunAction {
        "at": 1400,
        "pos": 25,
      },
      FunAction {
        "at": 1600,
        "pos": 75,
      },
      FunAction {
        "at": 1800,
        "pos": 25,
      },
    ],
    "channel": "",
    "channels": {
      "pitch": FunChannel {
        "actions": [
          FunAction {
            "at": 0,
            "pos": 50,
          },
          FunAction {
            "at": 100,
            "pos": 50,
          },
          FunAction {
            "at": 200,
            "pos": 49,
          },
          FunAction {
            "at": 300,
            "pos": 50,
          },
          FunAction {
            "at": 400,
            "pos": 49,
          },
          FunAction {
            "at": 500,
            "pos": 50,
          },
          FunAction {
            "at": 600,
            "pos": 49,
          },
          FunAction {
            "at": 700,
            "pos": 50,
          },
          FunAction {
            "at": 800,
            "pos": 49,
          },
          FunAction {
            "at": 900,
            "pos": 50,
          },
        ],
        "channel": "pitch",
        "channels": {},
        "file": FunscriptFile {
          "channel": "pitch",
          "dir": "",
          "mergedFiles": undefined,
          "title": "test-video",
        },
        "metadata": FunMetadata {
          "bookmarks": [],
          "chapters": [],
          "duration": 0,
        },
        "parent": [Circular],
      },
      "roll": FunChannel {
        "actions": [
          FunAction {
            "at": 0,
            "pos": 50,
          },
          FunAction {
            "at": 75,
            "pos": 50,
          },
          FunAction {
            "at": 150,
            "pos": 49,
          },
          FunAction {
            "at": 225,
            "pos": 50,
          },
          FunAction {
            "at": 300,
            "pos": 49,
          },
          FunAction {
            "at": 375,
            "pos": 50,
          },
          FunAction {
            "at": 450,
            "pos": 49,
          },
          FunAction {
            "at": 525,
            "pos": 50,
          },
          FunAction {
            "at": 600,
            "pos": 49,
          },
          FunAction {
            "at": 675,
            "pos": 50,
          },
        ],
        "channel": "roll",
        "channels": {},
        "file": FunscriptFile {
          "channel": "roll",
          "dir": "",
          "mergedFiles": undefined,
          "title": "test-video",
        },
        "metadata": FunMetadata {
          "bookmarks": [],
          "chapters": [],
          "duration": 0,
        },
        "parent": [Circular],
      },
    },
    "file": FunscriptFile {
      "channel": "",
      "dir": "",
      "mergedFiles": [
        FunscriptFile {
          "channel": "",
          "dir": "",
          "mergedFiles": undefined,
          "title": "test-video",
        },
        FunscriptFile {
          "channel": "roll",
          "dir": "",
          "mergedFiles": undefined,
          "title": "test-video",
        },
        FunscriptFile {
          "channel": "pitch",
          "dir": "",
          "mergedFiles": undefined,
          "title": "test-video",
        },
      ],
      "title": "test-video",
    },
    "metadata": FunMetadata {
      "bookmarks": [],
      "chapters": [],
      "duration": 0,
    },
    "parent": undefined,
  },
  Funscript {
    "actions": [
      FunAction {
        "at": 0,
        "pos": 50,
      },
      FunAction {
        "at": 40,
        "pos": 71,
      },
      FunAction {
        "at": 80,
        "pos": 28,
      },
      FunAction {
        "at": 120,
        "pos": 49,
      },
      FunAction {
        "at": 160,
        "pos": 71,
      },
      FunAction {
        "at": 200,
        "pos": 28,
      },
      FunAction {
        "at": 240,
        "pos": 49,
      },
      FunAction {
        "at": 280,
        "pos": 71,
      },
      FunAction {
        "at": 320,
        "pos": 28,
      },
      FunAction {
        "at": 360,
        "pos": 49,
      },
    ],
    "channel": "",
    "channels": {},
    "file": FunscriptFile {
      "channel": "",
      "dir": "",
      "mergedFiles": undefined,
      "title": "unrelated",
    },
    "metadata": FunMetadata {
      "bookmarks": [],
      "chapters": [],
      "duration": 0,
    },
    "parent": undefined,
  },
]
`;

exports[`Script Merging should merge multi-axis scripts by filename 2`] = `
[
  Funscript {
    "actions": [
      FunAction {
        "at": 0,
        "pos": 75,
      },
      FunAction {
        "at": 200,
        "pos": 25,
      },
      FunAction {
        "at": 400,
        "pos": 75,
      },
      FunAction {
        "at": 600,
        "pos": 25,
      },
      FunAction {
        "at": 800,
        "pos": 75,
      },
      FunAction {
        "at": 1000,
        "pos": 25,
      },
      FunAction {
        "at": 1200,
        "pos": 75,
      },
      FunAction {
        "at": 1400,
        "pos": 25,
      },
      FunAction {
        "at": 1600,
        "pos": 75,
      },
      FunAction {
        "at": 1800,
        "pos": 25,
      },
    ],
    "channel": "",
    "channels": {
      "pitch": FunChannel {
        "actions": [
          FunAction {
            "at": 0,
            "pos": 50,
          },
          FunAction {
            "at": 100,
            "pos": 50,
          },
          FunAction {
            "at": 200,
            "pos": 49,
          },
          FunAction {
            "at": 300,
            "pos": 50,
          },
          FunAction {
            "at": 400,
            "pos": 49,
          },
          FunAction {
            "at": 500,
            "pos": 50,
          },
          FunAction {
            "at": 600,
            "pos": 49,
          },
          FunAction {
            "at": 700,
            "pos": 50,
          },
          FunAction {
            "at": 800,
            "pos": 49,
          },
          FunAction {
            "at": 900,
            "pos": 50,
          },
        ],
        "channel": "pitch",
        "channels": {},
        "file": FunscriptFile {
          "channel": "pitch",
          "dir": "",
          "mergedFiles": undefined,
          "title": "test-video",
        },
        "metadata": FunMetadata {
          "bookmarks": [],
          "chapters": [],
          "duration": 0,
        },
        "parent": [Circular],
      },
      "roll": FunChannel {
        "actions": [
          FunAction {
            "at": 0,
            "pos": 50,
          },
          FunAction {
            "at": 75,
            "pos": 50,
          },
          FunAction {
            "at": 150,
            "pos": 49,
          },
          FunAction {
            "at": 225,
            "pos": 50,
          },
          FunAction {
            "at": 300,
            "pos": 49,
          },
          FunAction {
            "at": 375,
            "pos": 50,
          },
          FunAction {
            "at": 450,
            "pos": 49,
          },
          FunAction {
            "at": 525,
            "pos": 50,
          },
          FunAction {
            "at": 600,
            "pos": 49,
          },
          FunAction {
            "at": 675,
            "pos": 50,
          },
        ],
        "channel": "roll",
        "channels": {},
        "file": FunscriptFile {
          "channel": "roll",
          "dir": "",
          "mergedFiles": undefined,
          "title": "test-video",
        },
        "metadata": FunMetadata {
          "bookmarks": [],
          "chapters": [],
          "duration": 0,
        },
        "parent": [Circular],
      },
    },
    "file": FunscriptFile {
      "channel": "",
      "dir": "",
      "mergedFiles": undefined,
      "title": "test-video",
    },
    "metadata": FunMetadata {
      "bookmarks": [],
      "chapters": [],
      "duration": 0,
    },
    "parent": undefined,
  },
  Funscript {
    "actions": [
      FunAction {
        "at": 0,
        "pos": 50,
      },
      FunAction {
        "at": 40,
        "pos": 71,
      },
      FunAction {
        "at": 80,
        "pos": 28,
      },
      FunAction {
        "at": 120,
        "pos": 49,
      },
      FunAction {
        "at": 160,
        "pos": 71,
      },
      FunAction {
        "at": 200,
        "pos": 28,
      },
      FunAction {
        "at": 240,
        "pos": 49,
      },
      FunAction {
        "at": 280,
        "pos": 71,
      },
      FunAction {
        "at": 320,
        "pos": 28,
      },
      FunAction {
        "at": 360,
        "pos": 49,
      },
    ],
    "channel": "",
    "channels": {},
    "file": FunscriptFile {
      "channel": "",
      "dir": "",
      "mergedFiles": undefined,
      "title": "unrelated",
    },
    "metadata": FunMetadata {
      "bookmarks": [],
      "chapters": [],
      "duration": 0,
    },
    "parent": undefined,
  },
]
`;

exports[`Script Merging should merge multi-axis scripts by filename 3`] = `
"{
  "metadata": {
    "duration": 1.8,
    "durationTime": "00:00:01.800"
  },
  "actions": [
    {"at":0,"pos":75},{"at":200,"pos":25},{"at":400,"pos":75},{"at":600,"pos":25},{"at":800,"pos":75},{"at":1000,"pos":25},{"at":1200,"pos":75},{"at":1400,"pos":25},{"at":1600,"pos":75},{"at":1800,"pos":25}
  ],
  "channels": {
    "roll": {
      "actions": [
        {"at":0,"pos":50},{"at":75,"pos":50},{"at":150,"pos":49},{"at":225,"pos":50},{"at":300,"pos":49},{"at":375,"pos":50},{"at":450,"pos":49},{"at":525,"pos":50},{"at":600,"pos":49},{"at":675,"pos":50}
      ]
    },
    "pitch": {
      "actions": [
        {"at":0,"pos":50},{"at":100,"pos":50},{"at":200,"pos":49},{"at":300,"pos":50},{"at":400,"pos":49},{"at":500,"pos":50},{"at":600,"pos":49},{"at":700,"pos":50},{"at":800,"pos":49},{"at":900,"pos":50}
      ]
    }
  },
  "version": "2.0"
}"
`;

exports[`Script Merging should merge multi-axis scripts by filename 4`] = `
"{
  "metadata": {
    "duration": 1.8,
    "durationTime": "00:00:01.800"
  },
  "actions": [
    {"at":0,"pos":75},{"at":200,"pos":25},{"at":400,"pos":75},{"at":600,"pos":25},{"at":800,"pos":75},{"at":1000,"pos":25},{"at":1200,"pos":75},{"at":1400,"pos":25},{"at":1600,"pos":75},{"at":1800,"pos":25}
  ],
  "axes": [
    {
      "id": "R1",
      "actions": [
        {"at":0,"pos":50},{"at":75,"pos":50},{"at":150,"pos":49},{"at":225,"pos":50},{"at":300,"pos":49},{"at":375,"pos":50},{"at":450,"pos":49},{"at":525,"pos":50},{"at":600,"pos":49},{"at":675,"pos":50}
      ]
    },
    {
      "id": "R2",
      "actions": [
        {"at":0,"pos":50},{"at":100,"pos":50},{"at":200,"pos":49},{"at":300,"pos":50},{"at":400,"pos":49},{"at":500,"pos":50},{"at":600,"pos":49},{"at":700,"pos":50},{"at":800,"pos":49},{"at":900,"pos":50}
      ]
    }
  ],
  "version": "1.1"
}"
`;

exports[`Script Merging should merge multi-axis scripts by filename 5`] = `
"{
  "metadata": {
    "duration": 1.8,
    "durationTime": "00:00:01.800"
  },
  "actions": [
    {"at":0,"pos":75},{"at":200,"pos":25},{"at":400,"pos":75},{"at":600,"pos":25},{"at":800,"pos":75},{"at":1000,"pos":25},{"at":1200,"pos":75},{"at":1400,"pos":25},{"at":1600,"pos":75},{"at":1800,"pos":25}
  ]
}"
`;
